﻿V.3 (alpha)					? June 2017

	New:
		2 new retirees


V.2 (alpha)					2nd June 2017

	First public release